@@ -69,6 +69,20 @@ class ZMRedirectView extends ZMView {
     /**
      * {@inheritDoc}
      */
+    public function exists($request, $template) {
+        throw new ZMException('not supported');
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    public function asUrl($request, $template) {
+        throw new ZMException('not supported');
+    }
+
+    /**
+     * {@inheritDoc}
+     */
     public function generate($request) { 
         $url = null;
         if (null != $this->url_) {
