@@ -149,4 +149,18 @@ EOT;
         throw new ZMException('not supported');
     }
 
+    /**
+     * {@inheritDoc}
+     */
+    public function exists($request, $template) {
+        throw new ZMException('not supported');
+    }
+
+    /**
+     * {@inheritDoc}
+     */
+    public function asUrl($request, $template) {
+        throw new ZMException('not supported');
+    }
+
 }
