@@ -72,9 +72,11 @@
           <?php if (ZMTemplateManager::instance()->isLeftColEnabled()) { ?>
             <div id="sidebar" >
               <?php foreach (ZMTemplateManager::instance()->getLeftColBoxNames() as $box) { ?>
+                <?php if ($this->exists('boxes/'.$box)) { ?>
                   <div class="sidebox">
-                      <?php echo $this->fetch('boxes/'.$box) ?>
+                    <?php echo $this->fetch('boxes/'.$box) ?>
                   </div>
+                <?php } ?>
               <?php } ?>
             </div>
           <?php } ?>
@@ -84,7 +86,9 @@
         <div class="grid_4 omega">
       
           <?php foreach (ZMTemplateManager::instance()->getRightColBoxNames() as $box) { ?>
-                  <?php echo $this->fetch('boxes/'.$box) ?>
+            <?php if ($this->exists('boxes/'.$box)) { ?>
+              <?php echo $this->fetch('boxes/'.$box) ?>
+            <?php } ?>
           <?php } ?>
         
         </div>	
