@@ -38,9 +38,11 @@ Released   : 20081126
         <div id="sidebar1" class="sidebar">
           <ul>
             <?php foreach (ZMTemplateManager::instance()->getLeftColBoxNames() as $box) { ?>
-              <li>
-                  <?php echo $this->fetch('boxes/'.$box) ?>
-              </li>
+              <?php if ($this->exists('boxes/'.$box)) { ?>
+                <li>
+                <?php echo $this->fetch('boxes/'.$box) ?>
+                </li>
+              <?php } ?>
             <?php } ?>
           </ul>
         </div>
@@ -70,9 +72,11 @@ Released   : 20081126
         <div id="sidebar2" class="sidebar">
           <ul>
             <?php foreach (ZMTemplateManager::instance()->getRightColBoxNames() as $box) { ?>
-              <li>
-                  <?php echo $this->fetch('boxes/'.$box) ?>
-              </li>
+              <?php if ($this->exists('boxes/'.$box)) { ?>
+                <li>
+                <?php echo $this->fetch('boxes/'.$box) ?>
+                </li>
+              <?php } ?>
             <?php } ?>
           </ul>
         </div>
